# Transgator

./: CMakeLists.txt  README.md
src/: HashMap.cpp  HashMap.h  Trie.cpp  Trie.h  dictionary.h  main.cpp  sfmlhelpers.cpp  sfmlhelpers.h
